Fixed tag issue with CMD on Firefox and added bridge to add tasks

--- a/app/styles/module/_organise-bar.scss
+++ b/app/styles/module/_organise-bar.scss
@@ -2,7 +2,7 @@
 	display:none;
 
 	@include breakpoint(tablet, height){
-		padding-top: 21px;
+		padding-top: 14px;
 	}
 	&.bottom{
 		height:70px;
